log
Thu 11 May 2023 04:33:31 PM UTC: 
 tests:  0|4
total_score: 0/70
03e8674
Thu 11 May 2023 04:39:41 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|4
total_score: 0/70
014b0d2
Thu 11 May 2023 04:39:51 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:4: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   37 |   h->heapArray = (heapElem *) malloc (sizeof(heapElem *));
      |    ^~
heap.c:36:22: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap *h = (Heap *) malloc (sizeof(Heap *));
      |                      ^~~~~~~~~~~~~~~~~~~~~~~
heap.c:38:4: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   38 |   h->capac = 3;
      |    ^~
heap.c:36:22: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap *h = (Heap *) malloc (sizeof(Heap *));
      |                      ^~~~~~~~~~~~~~~~~~~~~~~
heap.c:39:4: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   39 |   h->size = 0;
      |    ^~
heap.c:36:22: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap *h = (Heap *) malloc (sizeof(Heap *));
      |                      ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a2df0a5
Thu 11 May 2023 04:40:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:4: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   38 |   h->capac = 3;
      |    ^~
heap.c:36:22: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap *h = (Heap *) malloc (sizeof(Heap *));
      |                      ^~~~~~~~~~~~~~~~~~~~~~~
heap.c:39:4: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   39 |   h->size = 0;
      |    ^~
heap.c:36:22: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap *h = (Heap *) malloc (sizeof(Heap *));
      |                      ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ba4377a
Thu 11 May 2023 04:42:42 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
71aad78
Thu 11 May 2023 04:43:04 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap *h = (Heap) malloc (sizeof(Heap));
      |   ^~~~
Compilation failed
c1792e3
Thu 11 May 2023 04:43:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
189b31a
Thu 11 May 2023 04:43:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1eb0d62
Thu 11 May 2023 04:48:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8c49a79
Thu 11 May 2023 04:48:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0a6af02
Thu 11 May 2023 04:51:45 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:28: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   22 |     return pq->heapArray[0].priority;
      |            ~~~~~~~~~~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
14e9c0d
Thu 11 May 2023 04:52:31 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:12: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   23 |     return maxPriority;
      |            ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8f16e86
Thu 11 May 2023 04:52:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:24: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   21 |   void * maxPriority = pq->heapArray[0].priority;
      |                        ^~
cc1: all warnings being treated as errors
Compilation failed
c51e961
